--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 </h2>
             </div>
             <div class="animate-botom">
-                <h1 class="headline headline-dark">Blend</h1>
+                <h1 class="headline">Blend</h1>
             </div> 
         </div>
     </div>
@@ -192,7 +192,7 @@
             <a href="#hero"> <i  class="fas fa-chevron-up"> </i></a>
         </div>
         <div class="footer-content">
-            <div class="footer-content-about animate-up">
+            <div class="footer-content-about animate-top">
                 <h4>About Rosa</h4>
                 <div class="asterisk"><i class="fas fa-asterisk"></i></div>
                 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, non? Minima, 
