--- a/index.html
+++ b/index.html
@@ -62,10 +62,8 @@
             <div class="restaurant-info">
                 <div class="restaurant-description padding-right animate-left">
                     <div class="global-headline">
-                        <h2 class="sub-headline">
-                              <span class="first-letter">D</span>iscover
-                            </h2>
-                            <h1 class="headline headline-dark">Our story</h1> 
+                        <h2 class="sub-headline">nossa</h2>
+                            <h1 class="headline headline-dark">história</h1> 
                             <img src="imagens/divider.svg" class="divider">
                     </div>
                     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut 
@@ -89,12 +87,10 @@
         <div class="container">
             <div class="global-headline">
                 <div class="animate-top">
-                    <h2 class="sub-headline">
-                        <span class="first-letter">T</span>asteful
-                    </h2>
+                    <h2 class="sub-headline">cores</h2>
                 </div>
                 <div class="animate-botom">
-                    <h1 class="headline">Recipes</h1>
+                    <h1 class="headline">e sabores</h1>
                 </div> 
             </div>
         </div>
@@ -114,10 +110,8 @@
                 </div>
                 <div class="restaurant-description animate-right">
                     <div class="global-headline">
-                        <h2 class="sub-headline">
-                              <span class="first-letter">D</span>iscover
-                            </h2>
-                            <h1 class="headline headline-dark">Menu</h1> 
+                        <h2 class="sub-headline">sabor</h2>
+                            <h1 class="headline headline-dark">latino</h1> 
                             <img src="imagens/divider.svg" class="divider">
                     </div>
                     <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas est laudantium nulla, 
@@ -137,12 +131,10 @@
     <div class="container">
         <div class="global-headline">
             <div class="animate-top">
-                <h2 class="sub-headline">
-                    <span class="first-letter">T</span>he Perfect
-                </h2>
+                <h2 class="sub-headline">Tudo</h2>
             </div>
             <div class="animate-botom">
-                <h1 class="headline">Blend</h1>
+                <h1 class="headline">misturado</h1>
             </div> 
         </div>
     </div>
@@ -156,10 +148,8 @@
         <div class="restaurant-info">
             <div class="restaurant-description padding-right animate-left">
                 <div class="global-headline">
-                    <h2 class="sub-headline">
-                          <span class="first-letter">C</span>ulinary
-                        </h2>
-                        <h1 class="headline headline-dark">Delight</h1> 
+                    <h2 class="sub-headline">Nossas</h2>
+                        <h1 class="headline headline-dark">sobremesas</h1> 
                         <img src="imagens/divider.svg" class="divider">
                 </div>
                 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut 
@@ -186,7 +176,7 @@
         </div>
         <div class="footer-content">
             <div class="footer-content-about animate-top">
-                <h4>About Rosa</h4>
+                <h4>Venha nos visitar!</h4>
                 <div class="asterisk"><i class="fas fa-asterisk"></i></div>
                 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, non? Minima, 
                     accusamus culpa similique eligendi dolor eos deserunt voluptatum ipsum? Itaque 
@@ -194,7 +184,7 @@
             </div>
             <div class="footer-content-divider animate-bottom">
             <div class="social-media">
-                <h4> Follow along </h4>
+                <h4> Nos siga!</h4>
                 <ul class="social-icons"> 
                     <li> 
                         <a href="#"><i class="fab fa-twitter"></i></a>
@@ -203,21 +193,15 @@
                         <a href="#"><i class="fab fa-facebook-square"></i></a>
                     </li>
                     <li> 
-                        <a href="#"><i class="fab fa-pinterest"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
                     </li>
-                    <li> 
-                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                    </li>
-
-                    <li> 
-                        <a href="#"><i class="fab fa-github"></i></a>
-                    </li>
+        
 
                 </ul>
             </div>
 
             <div class="newsletter-container">
-                <h4> Newsletter </h4>
+                <h4> Promoções exclusivas?</h4>
                 <form action="" class="newsletter-form">
                     <input type="text" class="newsletter-input" placeholder="Your E-mail adress">
                     <button class="newsletter-btn" type="submit">
