--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             <div class="newsletter-container">
                 <h4> Promoções exclusivas?</h4>
                 <form action="" class="newsletter-form">
-                    <input type="text" class="newsletter-input" placeholder="Your E-mail adress">
+                    <input type="text" class="newsletter-input" placeholder="Seu e-mail">
                     <button class="newsletter-btn" type="submit">
                         <i class="fas fa-envelope"></i>
                     </button>
